--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,16 @@
     />
     <link rel="stylesheet" href="static/styles.css" />
     <script src="static/script.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        var tooltipTriggerList = [].slice.call(
+          document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        );
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+          return new bootstrap.Tooltip(tooltipTriggerEl);
+        });
+      });
+    </script>
     <title>Undercoover</title>
   </head>
   <body>
